--- a/midterm/css/all.css
+++ b/midterm/css/all.css
@@ -75,7 +75,7 @@ body{
 
 
 .wrap{
-	width: 1180px;
+	max-width: 1024px;
 	margin: 0 auto;
 }
 
@@ -107,7 +107,7 @@ body{
 }
 
 .container{
-	width: 900px;
+	width: 90%;
 	margin: 0 auto;
 }
 
@@ -412,7 +412,7 @@ h3 a{
 	}
 
 	.container{
-	width: 900px;
+	width: 100%;
 	margin: 0 auto;
 	}
 
@@ -425,12 +425,24 @@ h3 a{
 	top: 0px;
 	}
 
-	.introduce{
-	width: 860px;
+	.banner{
+		width: 60%;
 	}
 
+	.illustration{
+		width: 40%;
+	}
+
+
+	.introduce{
+		width: 94%;
+		margin:10px auto;
+	}
+
+
 	.about{
-		width: 840px;
+		width: 92%;
+		margin: 10px auto;
 	}
 }
 
@@ -440,24 +452,32 @@ h3 a{
 	}
 
 	.container{
-		width: 700px;
+		width: 90%;
 		margin: 0 auto;
 	}
 
+	.menu{
+		width: 60%
+	}
+	.menu li{
+		float: left;
+		margin-left: 20px;
+	}
+
 	.banner{
-		width: 700px;
+		width: 100%;
 		clear: both;
 	}
 
 	.banner a{
+		width: 100%;
 		background-repeat: no-repeat;
-		width: 700px;
-		background-size: 700px auto;
 		margin: 0 auto;
 	}
 
 	.illustration{
 		clear: both;
+		margin: 10px auto;
 		width: 100%;
 		height: 300px;
 	}
@@ -482,17 +502,25 @@ h3 a{
 	}
 
 	.introduce{
-		width: 660px;
+		width:91%;
 	}
 
 	.about{
-		width: 640px;
+		width: 87%;
+	}
+
+	.about p{
+		width: 90%;
+	}
+
+	.latest-events-wrap{
+		width:100%;
 	}
 
 	.service-list-wrap{
 		margin-top: 30px;
-		margin-left: 5px;
-		width: 320px;
+		margin-left: 20%;
+		width: 90%;
 	}
 
 	.service-list-wrap ul{
@@ -501,12 +529,14 @@ h3 a{
 
 	.find-us-wrap{
 		float: right;
-		width: 250px;
+		width: 100%;
+		text-align: center;
 	}
 
 	.search-button{
 		display: block;
 		width: 187px;
+		margin:10px auto;
 	}
 }
 
