--- a/css/all.css
+++ b/css/all.css
@@ -177,19 +177,20 @@ h1 a{
 
 .banner{
 	float: left;
+	width: 70%;
 }
 
 .banner a{
 	display: block;
 	background: url("../images/slider-1.png");
-	width: 640px;
+	background-repeat: no-repeat;
 	height: 415px;
 }
 
 .illustration{
 	float: left;
 	background-color: #292929;
-	width: 260px;
+	width: 30%;
 	height: 415px;
 }
 
@@ -457,7 +458,7 @@ h3 a{
 	}
 
 	.menu{
-		width: 60%
+		width: 60%;
 	}
 	.menu li{
 		float: left;
@@ -496,14 +497,17 @@ h3 a{
 		font-size: 20px;
 	}
 
+
 	.readmore{
-		margin: 0 auto;
-		margin-top: 30px;
+		margin: 10px auto;
+
 	}
 
 	.introduce{
 		width:91%;
 	}
+
+
 
 	.about{
 		width: 87%;
@@ -518,9 +522,9 @@ h3 a{
 	}
 
 	.service-list-wrap{
-		margin-top: 30px;
-		margin-left: 20%;
-		width: 90%;
+		width: 80%;
+		margin: 10px auto;
+		text-align: center;
 	}
 
 	.service-list-wrap ul{
@@ -546,22 +550,31 @@ h3 a{
 	}
 
 	.container{
-		width: 300px;
+		width: 90%;
 		margin: 0 auto;
 	}
 
 	h1 a{
+		float: none;
 		clear: both;
 	}
+
+	.header{
+		width: 90%;
+		margin:10px auto;
+	}
 	.menu{
-		width:290px;
+		float: none;
+		width:100%;
 		display: block;
 		position: relative;
 		clear: both;
-		margin: 0 auto;
+		margin:0 auto;
 	}
 
 	.menu li{
+		float: none;
+		margin-left: 0;
 		line-height: 30px;
 		height: 30px;
 		display: block;
@@ -570,16 +583,29 @@ h3 a{
 		text-align: center;
 		margin-top: 10px;
 		background: #0B1114;
-		margin-left: 0;
-		border-radius: 5px;
 	}
 
 	.menu li a{
+		float: none;
 		display: block;
+		width:100%;
+
+	}
+
+	.display{
+		width: 90%;
+		margin:10px auto;
 	}
 
 	.banner{
 		display: none;
+	}
+
+	.illustration{
+		width: 100%;
+		height: 30%;
+		margin: 10px auto;
+		float: none;
 	}
 
 	.illustration h2 {
@@ -592,15 +618,19 @@ h3 a{
 	}
 
 	.illustration p{
-		width: 270px;
+		width: 90%;
 	}
 
 	.introduce{
-		width: 260px;
+		width: 80%;
+	}
+
+	.introduce p{
+		width: 95%;
 	}
 
 	.about{
-		width:240px;
+		width:70%;
 	}
 
 	.latest-events-wrap{
@@ -619,7 +649,7 @@ h3 a{
 
 	.social-link{
 		position: absolute;
-		right: 10px;
+		right: 20px;
 		top: 0px;
 	}
 
@@ -650,6 +680,20 @@ h3 a{
 		margin-left: 0;
 		margin-top: 5px;
 		background-size: 40px 40px;
+	}
+
+	.footer{
+		width: 90%;
+		margin:10px auto;
+	}
+
+}
+
+
+@media only screen and (max-width: 320px){
+	.menu li{
+		margin-left: 0;
+		width: 100%
 	}
 
 }
