--- a/css/all.css
+++ b/css/all.css
@@ -570,19 +570,21 @@ h3 a{
 		position: relative;
 		clear: both;
 		margin:0 auto;
+		right: 0;
 	}
 
 	.menu li{
 		float: none;
 		margin-left: 0;
-		line-height: 30px;
-		height: 30px;
+		line-height: 40px;
+		height: 40px;
 		display: block;
 		width:100%;
 		clear: both;
 		text-align: center;
 		margin-top: 10px;
 		background: #0B1114;
+		border-radius: 5px;
 	}
 
 	.menu li a{
